--- CHANGELOG ---
--- PyFMI-2.8.6 ---
    * Fixed so that the written binary file is always consistent (i.e.
      if a simulation aborts, it can still be read)
    * Changed default loading strategiy for binary files, now the
      trajectories are loaded on demand instead of all at the same time.
    * Updated Master algorithm options documentation and fixed result
      file naming.
    * Fixed 'block_initialization' in Master algorithm when using 
      Python 3
    * Fixed so that .initial is set properly on ScalarVariable2.
    * Fixed get_variable_nominal when called for valueref of variable.
    
--- PyFMI-2.8.5 ---
    * Added support for option 'logging' for different ODE solvers.
    
--- PyFMI-2.8.4 ---
    * Added utility function for determining if the maximum log file
      size has been reached
    * Added support for parsing boolean values in the XML log parser
    
--- PyFMI-2.8.3 ---
    * Fixed result saving when saving only the "time" variable
    * Exposed the dependencies kind attributes from FMI 2.0

--- PyFMI-2.8.2 ---
    * Added default arguments in the simulation interface (minor)

--- PyFMI-2.8.1 ---
    * Fixed so that the internal event information is saved together
      with the FMU state (when using save / get state).

--- PyFMI-2.8 ---
    * Fixed so that default options are not overriden when setting
      solver options.
    * Improved performance when simulating FMI 2.0 ME FMUs.
    * Building PyFMI now requires that Assimulo is installed.

--- PyFMI-2.7.4 ---
    * Minor fix for save/get state functionality.

--- PyFMI-2.7.3 ---
    * Added support for retrieving relative quantity
    * Fixed pickling of the OptionsBase class
    * Enabled support for serialize/de-serialization of FMU state

--- PyFMI-2.7.2 ---
    * Corrected version number.

--- PyFMI-2.7.1 ---
    * Fixed so that free/terminate methods are called correctly

--- PyFMI-2.7 ---
    * Fixed logging messages being printed to the console during 