@@ -1,4 +1,8 @@
 --- CHANGELOG ---
+--- TBD ---
+    * Fixed so that a matrix of all the result from a binary file can 
+      be retrieved even if delayed loading is used.
+      
 --- PyFMI-2.8.6 ---
     * Fixed so that the written binary file is always consistent (i.e.
       if a simulation aborts, it can still be read)
